# solana-l2

./: .gitignore  How L1 Write Happens.md  How Sequencer Works.md  README.md
off-chain/: Cargo.toml  README.md
off-chain/blockroot/src/: README.md  da.rs  lib.rs
off-chain/keypairs/: faucet.json  identity.json  mint.json  receiver.json  vote.json
off-chain/ledger/: genesis.tar.bz2
off-chain/ledger/accounts_index/: accounts_index_restart
off-chain/ledger/rocksdb/: 000056.sst  000058.sst  000059.sst  000060.sst  000061.sst  000150.sst  000158.sst  000163.sst  000170.sst  000171.sst  IDENTITY  LOG  LOG.old.1717593562156233  LOG.old.1717594805792210  LOG.old.1717594942297476  LOG.old.1717595233096263  LOG.old.1717602297125381  LOG.old.1717645042169063  LOG.old.1717645067276967  LOG.old.1717645087423194  LOG.old.1717645122621024  LOG.old.1717720925980767  LOG.old.1718112728465437  LOG.old.1718112990125368  LOG.old.1718113482268402  LOG.old.1718113503323033  LOG.old.1718113518946880  LOG.old.1718114016550876  LOG.old.1718114608027143  LOG.old.1718114627484994  LOG.old.1718165024186411  MANIFEST-000160  MANIFEST-000173  OPTIONS-000167  OPTIONS-000169
off-chain/node/: Cargo.toml
off-chain/node/src/: main.rs  nots  sequencer.rs
on-chain/: Anchor.toml
on-chain/programs/on-chain/: Cargo.toml
on-chain/programs/on-chain/src/: bridge.rs  error.rs  lib.rs
on-chain/tests/: on-chain.ts
