[package]
name = "node"
version = "0.0.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
solana-accounts-db = "1.18.15"
solana-client = "1.18.16"
solana-core = "1.18.15"
solana-entry = "1.18.16"
solana-gossip = "1.18.15"
solana-ledger = "1.18.14"
solana-metrics = "1.18.16"
solana-net-utils = "1.18.16"
solana-program = "1.18.15"
solana-program-runtime = "1.18.15"
solana-rpc = "1.18.15"
solana-runtime = "1.18.14"
solana-sdk = "1.18.14"
solana-streamer = "1.18.15"
solana-validator = "1.18.14"
solana-version = "1.18.16"
